# code-coder

./: .codecoder_session.json  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  README_CN.md  README_ZH.md  SKILL.md  ops.sh  package.json  turbo.json
services/: Cargo.toml  TEST_README.md
services/docs/design/: interactive-2fa.md  streaming-confirmation-buttons.md
services/docs/progress/: rust-first-refactor.md
services/zero-agent/: Cargo.toml
services/zero-agent/src/: confirmation.rs  context.rs  executor.rs  lib.rs  provider.rs
services/zero-api/: Cargo.toml
services/zero-api/src/: main.rs
services/zero-api/src/routes/: health.rs  mcp.rs  session.rs  tools.rs  ws.rs
services/zero-bot/: CLAUDE.md  Cargo.toml
services/zero-bot/docs/: README.md
services/zero-bot/docs/architecture/: DATA_FLOW.md  OVERVIEW.md  TRAITS.md
services/zero-bot/docs/development/: CHANGELOG.md  CONTRIBUTING.md  PROGRESS.md  TESTING.md
services/zero-bot/docs/guides/: CONFIGURATION.md  EXTENDING.md  QUICK_START.md
services/zero-bot/docs/reference/: CHANNELS.md  CLI.md  PROVIDERS.md
services/zero-bot/examples/: config.toml.example  custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
services/zero-bot/src/: lib.rs  main.rs  migration.rs  util.rs
services/zero-bot/src/agent/: confirmation.rs  executor.rs  loop_.rs  mod.rs
services/zero-bot/src/channels/: cli.rs  discord.rs  email_channel.rs  feishu.rs  imessage.rs  matrix.rs  mod.rs  slack.rs  telegram.rs  telegram_format.rs  traits.rs  whatsapp.rs
services/zero-bot/src/config/: mod.rs  schema.rs
services/zero-bot/src/cron/: mod.rs
services/zero-bot/src/daemon/: mod.rs
services/zero-bot/src/doctor/: mod.rs
services/zero-bot/src/gateway/: mod.rs
services/zero-bot/src/integrations/: mod.rs  registry.rs
services/zero-bot/src/mcp/: adapter.rs  client.rs  mod.rs  server.rs
services/zero-bot/src/memory/: chunker.rs  sqlite.rs
services/zero-bot/src/onboard/: wizard.rs
services/zero-bot/src/providers/: anthropic.rs  compatible.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
services/zero-bot/src/security/: mod.rs  vault.rs
services/zero-bot/src/session/: compactor.rs  mod.rs  types.rs
services/zero-bot/src/skills/: hub.rs  mod.rs
services/zero-bot/src/stt/: compatible.rs  mod.rs  openai.rs  traits.rs
services/zero-bot/src/tools/: auto_login.rs  codecoder.rs  composio.rs  file_read.rs  file_write.rs  mod.rs  registry.rs  shell.rs  skill_search.rs
services/zero-bot/src/tts/: elevenlabs.rs  mod.rs  openai.rs  traits.rs
services/zero-bot/tests/: memory_comparison.rs
services/zero-browser/: Cargo.toml
services/zero-browser/src/: error.rs  lib.rs  main.rs  routes.rs
services/zero-browser/src/browser/: mod.rs  session.rs
services/zero-browser/src/network/: mod.rs  monitor.rs
services/zero-browser/src/pattern/: extractor.rs  mod.rs  types.rs
services/zero-browser/src/replay/: executor.rs  mod.rs
services/zero-browser/src/routes/: mod.rs
services/zero-browser/tests/: integration.rs
services/zero-channels/: Cargo.toml
services/zero-channels/src/: bridge.rs  capture_bridge.rs  checkpoint.rs  cli.rs  debug.rs  dingtalk.rs  discord.rs  email.rs  event_consumer.rs  feishu.rs  imessage.rs  lib.rs  main.rs  matrix.rs  message.rs  outbound.rs  progress.rs  routes.rs  slack.rs  sse.rs  task_dispatcher.rs  timeout.rs  traits.rs  wecom.rs  whatsapp.rs
services/zero-channels/src/discord/: format.rs  mod.rs
services/zero-channels/src/slack/: format.rs  mod.rs
services/zero-channels/src/stt/: mod.rs  openai.rs
services/zero-channels/src/telegram/: format.rs  mod.rs
services/zero-channels/src/tts/: elevenlabs.rs  traits.rs
services/zero-channels/tests/: capture_integration_test.rs  integration_test.rs
services/zero-cli/: .dockerignore  Cargo.toml
services/zero-cli/src/: agents.rs  chat.rs  client.rs  commit.rs  credential.rs  jar.rs  lib.rs  main.rs  migration.rs  review.rs  trading.rs  util.rs
services/zero-cli/tests/: dockerignore_test.rs  memory_comparison.rs  sandbox_integration.rs
services/zero-common/: Cargo.toml  test_save.rs
services/zero-common/src/: audit.rs  bus.rs  config.rs  config_loader.rs  events.rs  guardrails.rs  hitl_client.rs  http_client.rs  keywords.rs  lib.rs  logging.rs  messages.rs  metrics.rs  redis.rs  test_config_preserve.rs  testing.rs  tracing_middleware.rs  util.rs  validation.rs
services/zero-common/tests/: export_bindings.rs
services/zero-core/: Cargo.toml  binding.d.ts  build.rs  index.d.ts  index.js  package.json
services/zero-core/benches/: performance.rs
services/zero-core/src/: binding.js  lib.rs
services/zero-gateway/: Cargo.toml
services/zero-gateway/src/: context.rs  lib.rs  main.rs  metering.rs  parallel.rs  quota.rs  rbac.rs  routes.rs  routing_policy.rs  sandbox.rs
services/zero-gateway/tests/: hitl_integration.rs  integration_test.rs
services/zero-hub/: Cargo.toml
services/zero-hub/src/: lib.rs
services/zero-memory/: Cargo.toml
services/zero-memory/src/: chunker.rs  embeddings.rs  hybrid_search.rs  lib.rs  markdown.rs  qdrant.rs  sqlite.rs  vector.rs
services/zero-memory/tests/: qdrant_integration.rs
services/zero-tools/: Cargo.toml
services/zero-tools/src/: browser.rs  codecoder.rs  edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  memory_forget.rs  memory_recall.rs  memory_store.rs  shell.rs  traits.rs
services/zero-trading/: Cargo.toml  README.md
services/zero-trading/src/: circuit_breaker.rs  lib.rs  main.rs  notification.rs  routes.rs  scheduler.rs
services/zero-trading/tests/: data_failover.rs  e2e_signal_flow.rs  macro_agent_integration.rs  paper_api_test.rs  routes_test.rs  stability_test.rs  test_cron_parsing.rs
services/zero-workflow/: Cargo.toml
services/zero-workflow/src/: economic_bridge.rs  lib.rs  main.rs  monitor_bridge.rs  review_bridge.rs  risk_monitor.rs  routes.rs  scheduler.rs  ticket_bridge.rs  trading_review.rs  webhook.rs  workflow.rs
services/zero-workflow/tests/: integration_test.rs
(+1250 files in other folders)
