[package]
name = "codecoder"
version = "0.1.0"
edition = "2024"
description = "自主 AI agent 系统 — 事件驱动，文件系统即自我"

[dependencies]
anyhow = "1"
atty = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
# tempfile already in [dependencies] — no separate dev-deps needed
