[workspace]
resolver = "2"
members = [
    "zero-cli",
    "zero-core",
    "zero-hub",
    "zero-trading",
]

# Shared dependencies across workspace
# Use `workspace = true` in member Cargo.toml to inherit
[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart", "gzip"] }

# HTTP server
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "query"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout", "cors"] }
http-body-util = "0.1"
http = "1.1"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yaml = "0.9"

# Config
directories = "5.0"
shellexpand = "3.1"
json5 = "0.4"

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "json", "env-filter", "std"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID
uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }

# Cryptography
chacha20poly1305 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# JWT
jsonwebtoken = "9.3"

# File locking
fs4 = "0.11"

# Secure memory
zeroize = "1.8"

# Random
rand = "0.8"

# Async traits
async-trait = "0.1"

# Lazy initialization
once_cell = "1.19"

# System keyring integration
keyring = "3.6"

# LSP server
tower-lsp = "0.20"

# Process management for LSP
async-process = "2.3"

# Hash functions for fingerprinting
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# SIMD operations
wide = "0.7"

# Redis (optional, for event bus backend)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
cron = "0.12"

# Regex
regex = "1.11"

# Graph algorithms
petgraph = "0.6"

# Git operations
git2 = "0.19"

# JAR/ZIP handling
zip = "2.1"

# Multi-pattern matching
aho-corasick = "1.1"

# Parallel processing
rayon = "1.10"

# Tree-sitter for shell parsing and code indexing
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"

# Tokenization (for LLM token counting)
tiktoken-rs = "0.6"

# LRU cache for tokenizer
lru = "0.12"

# PTY (pseudo-terminal) support
portable-pty = "0.8"

# URL parsing
url = "2.5"

# Password hashing
argon2 = "0.5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Vector database
qdrant-client = "1.8"

# Internal crates
zero-core = { path = "zero-core" }
zero-hub = { path = "zero-hub", features = ["full"] }

# Streams
futures-util = "0.3"

# File operations (for zero-core)
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
similar = "2.6"
memmap2 = "0.9"
notify = "8.0"
walkdir = "2.5"
globset = "0.4"
num_cpus = "1.16"
dirs = "5.0"

# Template engine
handlebars = "6.2"

# TypeScript bindings generation
ts-rs = { version = "12", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }

# Testing
tempfile = "3.14"
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
fake = { version = "3.0", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"
test-case = "3.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
