[package]
name = "zero-api"
version = "0.1.0"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT"
description = "HTTP/WebSocket API service for CodeCoder - exposes zero-core functionality"

[[bin]]
name = "zero-api"
path = "src/main.rs"

[dependencies]
# Internal crates
zero-core = { workspace = true }
zero-common = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# HTTP server
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true, features = ["timeout", "limit"] }
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip"] }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Lazy initialization
once_cell = { workspace = true }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = { workspace = true }

# Configuration
directories = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio-test = { workspace = true }
