[package]
name = "zero-channels"
version = "0.1.0"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT"
description = "Channel adapters for the Zero ecosystem - Telegram, Discord, Slack, Feishu, etc."
readme = "README.md"

[[bin]]
name = "zero-channels"
path = "src/main.rs"

[dependencies]
# Internal
zero-common = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http-body-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# Cryptography (for Feishu decryption, webhook signatures)
hmac = { workspace = true }
sha1 = "0.10"
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
aes = "0.8"
cbc = "0.1"
rand = "0.8"

# Async traits
async-trait = { workspace = true }

# Regex (for Telegram markdown conversion)
regex = { workspace = true }

# WebSocket (for Discord gateway)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# SSE (Server-Sent Events) client for streaming task events
eventsource-client = "0.13"

# Thread-safe concurrent HashMap for progress message tracking
dashmap = "5.5"

# Time
chrono = { workspace = true }

# Email (IMAP/SMTP)
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls"] }
mail-parser = "0.11"
rustls-pki-types = "1.14"
tokio-rustls = "0.26"
webpki-roots = "1.0"

# HTML processing
html-escape = "0.2"

# Directory lookup (for iMessage database)
directories = { workspace = true }

# SQLite (for iMessage database polling)
rusqlite = { workspace = true }

# PDF extraction (for document handling)
pdf-extract = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
