[package]
name = "zero-common"
version = "0.1.0"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT"
description = "Shared types, utilities, and configuration for the Zero ecosystem"
readme = "README.md"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Config
directories = { workspace = true }
shellexpand = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# Cryptography (for security types)
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Secure memory
zeroize = { workspace = true }

# Random
rand = { workspace = true }

# File locking
fs4 = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP types
http = { workspace = true }

# URL parsing
url = { workspace = true }

# Time
chrono = { workspace = true }
cron = { workspace = true }

# Regex
regex = { workspace = true }

# Database (for memory module)
rusqlite = { workspace = true }

# Vector database (for memory module)
qdrant-client = { workspace = true }

# HTTP client (for HitL client and memory module)
reqwest = { workspace = true }

# Axum (for tracing middleware)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

# Redis (optional)
redis = { workspace = true, optional = true }

# Streams (for Redis subscription)
futures-util = { workspace = true, optional = true }

# TypeScript bindings generation
ts-rs = { workspace = true, optional = true }

[features]
default = []
ts-bindings = ["ts-rs"]
redis-backend = ["redis", "futures-util"]
hitl-client = []
guardrails = []
http-client = []
blocking = ["reqwest/blocking"]
axum = ["dep:axum", "dep:tower"]
testing = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
mockall = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
