[package]
name = "zero-hub"
version = "0.1.0"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT"
description = "Service hub for the Zero ecosystem - combines gateway, channels, and workflow services"
readme = "README.md"

[lib]
name = "zero_hub"
path = "src/lib.rs"

[features]
default = ["full"]
# Enable all services
full = []

[dependencies]
# Internal
zero-core = { workspace = true, features = ["axum", "http-client", "redis-backend", "hitl-client"] }

# Async runtime
tokio = { workspace = true }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# JWT (for gateway)
jsonwebtoken = { workspace = true }

# Time
chrono = { workspace = true }
cron = { workspace = true }

# Regex
regex = { workspace = true }

# URL parsing
url = { workspace = true }

# Directory lookup
directories = { workspace = true }

# Database
rusqlite = { workspace = true }

# Password hashing (for gateway)
argon2 = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Cryptography (for channels: Feishu decryption, webhook signatures)
hmac = { workspace = true }
sha1 = "0.10"
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
aes = "0.8"
cbc = "0.1"
rand = "0.8"

# WebSocket (for Discord gateway)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# SSE client (for streaming task events)
eventsource-client = "0.13"

# Thread-safe concurrent HashMap
dashmap = "5.5"

# Email (IMAP/SMTP)
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls"] }
mail-parser = "0.11"
rustls-pki-types = "1.14"
tokio-rustls = "0.26"
webpki-roots = "1.0"

# HTML processing (for channels)
html-escape = "0.2"

# PDF extraction (for document handling)
pdf-extract = "0.8"

# HTML parsing for web scraping
scraper = "0.22"

# RSS feed parsing
rss = "2.0"

# Async utilities
futures = "0.3"

# Temp directories (for test state isolation)
tempfile = "3.14"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
async-trait = { workspace = true }
