[package]
name = "zero-memory"
version = "0.1.0"
edition = "2021"
description = "Memory system for Zero ecosystem - SQLite, vector search, embeddings"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
